--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -1,71 +1,72 @@
 {
-  "name": "carwash_pwa",
-  "version": "2.2.0",
-  "private": true,
-  "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mark-szabo/carwash"
-  },
-  "homepage": "https://carwashu.azurewebsites.net",
-  "keywords": [
-    "pwa",
-    "react",
-    "aspnetcore2.2"
-  ],
-  "author": {
-    "name": "Microsoft",
-    "url": "https://www.microsoft.com"
-  },
-  "contributors": [
-    "Mark Szabo",
-    "Jozsef Vadkerti",
-    "Akos Szego",
-    "Tamas Veiland",
-    "Gabor Kulcsar"
-  ],
-  "coyright": "Copyright (c) 2018 Microsoft",
-  "dependencies": {
-    "@appannie/react-infinite-calendar": "^3.6.7",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@microsoft/applicationinsights-react-js": "^3.4.0",
-    "@microsoft/applicationinsights-web": "^2.8.9",
-    "@microsoft/signalr": "^7.0.0",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
-    "@mui/styles": "^5.11.0",
-    "adal-angular": "^1.0.17",
-    "ajv": "^6.12.2",
-    "downloadjs": "^1.4.7",
-    "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.5",
-    "react-virtualized": "^9.22.3",
-    "rimraf": "^2.6.3",
-    "tslib": "^1.11.1"
-  },
-  "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-defaults": "^9.0.0",
-    "prettier-eslint": "^15.0.1"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "carwash_pwa",
+    "version": "2.2.0",
+    "private": true,
+    "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mark-szabo/carwash"
+    },
+    "homepage": "https://carwashu.azurewebsites.net",
+    "keywords": [
+        "pwa",
+        "react",
+        "aspnetcore2.2"
+    ],
+    "author": {
+        "name": "Microsoft",
+        "url": "https://www.microsoft.com"
+    },
+    "contributors": [
+        "Mark Szabo",
+        "Jozsef Vadkerti",
+        "Akos Szego",
+        "Tamas Veiland",
+        "Gabor Kulcsar"
+    ],
+    "coyright": "Copyright (c) 2018 Microsoft",
+    "dependencies": {
+        "@appannie/react-infinite-calendar": "^3.6.8",
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
+        "@microsoft/applicationinsights-react-js": "^17.3.0",
+        "@microsoft/applicationinsights-web": "^3.3.1",
+        "@microsoft/signalr": "^8.0.7",
+        "@mui/icons-material": "^5.16.7",
+        "@mui/material": "^5.16.7",
+        "@mui/styles": "^5.16.7",
+        "adal-angular": "^1.0.17",
+        "ajv": "^8.17.1",
+        "downloadjs": "^1.4.7",
+        "moment": "^2.30.1",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router": "^5.3.4",
+        "react-router-dom": "^5.3.4",
+        "react-scripts": "^5.0.1",
+        "react-transition-group": "^4.4.5",
+        "react-virtualized": "^9.22.5",
+        "rimraf": "^6.0.1",
+        "tslib": "^2.6.3"
+    },
+    "scripts": {
+        "start": "rimraf ./build && react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.1.0",
+        "eslint": "^9.9.0",
+        "eslint-config-defaults": "^9.0.0",
+        "prettier-eslint": "^16.3.0",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
