--- a/CarWash.PWA/ClientApp/.eslintrc
+++ b/CarWash.PWA/ClientApp/.eslintrc
@@ -1,7 +1,7 @@
 {
   /* See all the pre-defined configs here: https://www.npmjs.com/package/eslint-config-defaults */
   "extends": "defaults/configurations/airbnb/es6",
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "plugins": ["react", "import"],
   "env": {
     "amd": true,
