--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -1,13 +1,13 @@
 {
     "name": "carwash_pwa",
-    "version": "2.2.0",
+    "version": "2.3.0",
     "private": true,
     "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
     "repository": {
         "type": "git",
         "url": "https://github.com/mark-szabo/carwash"
     },
-    "homepage": "https://carwashu.azurewebsites.net",
+    "homepage": "https://mimosonk.hu",
     "keywords": [
         "pwa",
         "react",
