--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -28,7 +28,13 @@ jobs:
             - name: Build
               run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
             - name: Test
-              run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+              run: dotnet test "CarWash.PWA.Tests" --collect:"XPlat Code Coverage"
+            - name: Report code coverage
+              uses: codecov/codecov-action@v2
+              with:
+                  files: ./CarWash.PWA.Tests/TestResults/**/*.xml
+                  flags: unittests
+                  name: codecov-umbrella
             - name: Publish
               run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
             - name: Publish Artifacts
