--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "carwash_pwa",
-    "version": "2.3.12",
+    "version": "2.4.0",
     "private": true,
     "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
     "repository": {
@@ -49,7 +49,8 @@
         "react-transition-group": "^4.4.5",
         "react-virtualized": "^9.22.5",
         "rimraf": "^6.0.1",
-        "tslib": "^2.6.3"
+        "tslib": "^2.6.3",
+        "workbox-window": "^7.3.0"
     },
     "scripts": {
         "start": "rimraf ./build && react-scripts start",
