--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,7 @@ CarWash\.PWA\.Windows/_pkginfo\.txt
 TestResults/
 CarWash.PWA/Properties/serviceDependencies.mimosonk.json
 CarWash.Functions/Properties/serviceDependencies.func-carwash-mimosonk-prod - Zip Deploy.json
-CarWash.Functions/Properties/ServiceDependencies/func-carwash-mimosonk-prod - Zip Deploy/appInsights1.arm.json
-CarWash.Functions/Properties/ServiceDependencies/func-carwash-mimosonk-prod - Zip Deploy/storage1.arm.json
+CarWash.Functions/Properties/ServiceDependencies/func-carwash-mimosonk-prod - Zip Deploy/
 
 # Azure Functions artifacts
 bin
