--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -20,14 +20,15 @@ jobs:
         outputs:
             build_number: ${{ steps.build_number.outputs.VERSION }}
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout code
+              uses: actions/checkout@v4
             - name: Setup .NET SDK
               uses: actions/setup-dotnet@v3
               with:
                   dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
             - name: Read version number from package.json
               id: build_number
-              run: echo "VERSION=$(cat ${{ env.WORKING_DIRECTORY }}/ClientApp/package.json | jq '.version')" >> "$GITHUB_OUTPUT"
+              run: echo "VERSION=$(cat ${{ env.WORKING_DIRECTORY }}/ClientApp/package.json | jq '.version')" >> $env:GITHUB_OUTPUT
             - name: Create .env file with build number
               run: echo "REACT_APP_BUILD_NUMBER=${{ steps.build_number.outputs.VERSION }}" > ${{ env.WORKING_DIRECTORY }}/.env
             - name: Restore
